# job-hunting-agent

./: .gitignore  README.md  main.py  pyproject.toml
job_agent/: config.py  state.py  workflow.py
job_agent/data/: resume.md
job_agent/data/bq_stories/: conflict-resolution.md  leadership-mentoring.md  migration-architecture.md
job_agent/nodes/: analyzer.py  matcher.py  reporter.py  retriever.py  reviewer.py  scanner.py  tailor.py  writer.py
job_agent/utils/: llm.py  visadb.py
