[project]
name = "job-hunting-agent"
version = "0.1.0"
description = "Automated job-seeking agent: JD matching, resume tailoring, cover letter generation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.5.0",
    "langchain>=1.3.1",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=0.3.0",
    "openai>=2.37.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.13.0",
    "lxml>=5.3.0",
    "typer>=0.15.0",
    "rich>=13.9.0",
    "python-dotenv>=1.2.2",
    "numpy>=2.0.0",
    "duckduckgo-search>=8.1.1",
]
